[package]
name = "garage-door"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
futures = "0.3.28"
openff-toolkit = { version = "0.1.0", path = "../openff-toolkit" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
